--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
+/* Universal Selector */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Element Selectors */
 body {
     background-color: #d9dcd6;
 }
@@ -50,6 +52,18 @@ p {
     font-size: 16px;
 }
 
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+footer h2 {
+    font-size: 20px;
+}
+
+/* Image Banner below Header and Nav */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +73,7 @@ p {
     background-position: center;
 }
 
+/* Positions images in contents class */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,6 +84,7 @@ p {
     margin-left: 25px;
 }
 
+/* Class Selectors in Contents Section */
 .contents {
     width: 75%;
     display: inline-block;
@@ -93,6 +109,7 @@ p {
     font-size: 36px;
 }
 
+/* Class Selectors in Benefits Section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -118,15 +135,4 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-footer h2 {
-    font-size: 20px;
 }
